--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,5 @@
-# This workflow will install Python dependencies, run tests with a variety of Python versions.
+# demo.yaml
+# This workflow will install Python dependencies, run tests with a variety of Python versions
 name: Python package
 on:
   push:
@@ -21,10 +22,13 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-	pip install -r project_with_test/requirements/test_requirements.txt
+        pip install -r project_with_test/requirements/test_requirements.txt
     - name: Train pipeline
       run: |
         python project_with_test/titanic_model/train_pipeline.py
-    - name: Test with pytest
+    - name: test with pytest
       run: |
         pytest
+    - name: Format code with Black
+      run: |
+        make format
